--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 *.war
 *.nar
 *.ear
-//*.zip
 *.tar.gz
 *.rar
 *.iml
@@ -39,3 +38,4 @@ target/
 /gradlew.bat
 .todo
 *.properties
+/src/test/resources/files
