--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,12 @@ targetCompatibility = 11
 
 dependencies {
     testImplementation(
+            'org.apache.poi:poi-ooxml:4.1.2',
+            'org.apache.pdfbox:pdfbox:2.0.24',
             'com.codeborne:pdf-test:1.6.1',
             'com.codeborne:xls-test:1.4.3',
             'com.opencsv:opencsv:5.3',
+            'net.lingala.zip4j:zip4j:1.3.2',
             "org.assertj:assertj-core:3.19.0",
             'org.junit.jupiter:junit-jupiter-api:5.7.2',
             'org.junit.jupiter:junit-jupiter-params:5.7.2',
